--- a/정보보안기사/정보보안기사 공부루트.md
+++ b/정보보안기사/정보보안기사 공부루트.md
@@ -86,6 +86,75 @@
 
 ---
 
+## 📝 과목별 기출문제 분류
+
+### 🔐 정보보안 일반
+
+* 자주 출제: CIA, 보안의 3요소, 보안 위협 유형
+* 기출 키워드: 자산/위협/취약점/위험, 보안 정책 종류
+
+### 🌐 네트워크 보안
+
+* 자주 출제: OSI 7계층 기능과 공격 매핑
+* 기출 키워드: ARP/DNS 스푸핑, IDS vs 방화벽, VPN, SSL/TLS
+
+### 🖥 시스템 보안
+
+* 자주 출제: MAC, DAC, RBAC 비교, 보안 커널, 악성코드 유형
+
+### 📱 애플리케이션 보안
+
+* 자주 출제: OWASP Top 10
+* 기출 키워드: SQL Injection, XSS, CSRF, 보안코딩 요소
+
+### 📚 법규 및 정책
+
+* 자주 출제: 개인정보보호법 조항, ISMS-P 구조
+* 기출 키워드: 개인정보처리 원칙, 인증 범위
+
+---
+
+## 🧠 요약 암기 카드 예시
+
+| 질문                   | 답변                         |
+| -------------------- | -------------------------- |
+| 정보보안의 3요소는?          | 기밀성, 무결성, 가용성 (CIA)        |
+| ARP 스푸핑은 몇 계층?       | 2계층 (데이터링크)                |
+| RBAC는 어떤 접근 통제 모델인가? | 직무 기반 모델                   |
+| SQL Injection 방어법은?  | 입력값 검증, Prepared Statement |
+| ISMS-P의 구성요소는?       | 관리/기술/물리적 보호 + 개인정보보호      |
+
+---
+
+## 🔁 시각적 흐름도 설명
+
+### 정보보안 원리 흐름도
+
+```
+[정보자산] 
+   ↓
+[위협/취약점] 
+   ↓
+[보안 요구사항 (CIA)] 
+   ↓
+[보안 기술 적용]
+   ├─ 암호화 (기밀성)
+   ├─ 해시/무결성 체크 (무결성)
+   └─ 백업/이중화 (가용성)
+```
+
+### 네트워크 계층별 공격 흐름
+
+```
+[사용자 입력] → [웹 서버]
+     ↓                 ↓
+  [SQL Injection]   [XSS]
+     ↓
+  [DB 유출]
+```
+
+---
+
 > 📌 추가 Tip:
 >
 > * 기출문제를 기준으로 핵심 개념이 얼마나 반복되는지 체크하며 암기 우선순위를 정하세요.
